@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="default">
+ <translations product="CPSOOo"/>
+</object>
