@@ -1,0 +1,82 @@
+<?xml version="1.0"?>
+<object name="OOoDocbookDocument" meta_type="CPS Flexible Type Information"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title">portal_type_OOoDocbookDocument_title</property>
+ <property
+    name="description">portal_type_OOoDocbookDocument_description</property>
+ <property name="content_icon">ooo_docbook_document_icon.png</property>
+ <property name="content_meta_type">OOoDocbookDocument</property>
+ <property name="product">CPSOOo</property>
+ <property name="factory">addOOoDocbookDocumentInstance</property>
+ <property name="immediate_view">cpsdocument_view</property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">True</property>
+ <property name="allowed_content_types"/>
+ <property name="allow_discussion">True</property>
+ <property name="cps_is_searchable">True</property>
+ <property name="cps_proxy_type">document</property>
+ <property name="cps_display_as_document_in_listing">False</property>
+ <property name="schemas">
+  <element value="metadata"/>
+  <element value="common"/>
+  <element value="ooo_docbook_document"/>
+ </property>
+ <property name="layouts">
+  <element value="common"/>
+  <element value="ooo_docbook_document"/>
+ </property>
+ <property name="layout_clusters">
+  <element value="metadata:metadata"/>
+ </property>
+ <property name="flexible_layouts"/>
+ <property name="storage_methods"/>
+ <property name="cps_is_portlet">False</property>
+ <alias from="view" to="cpsdocument_view"/>
+ <action title="action_view" action_id="view" category="object"
+    condition_expr="" url_expr="string:${object_url}/cpsdocument_view"
+    visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="action_new_content" action_id="new_content" category="object"
+    condition_expr="python:object.getTypeInfo().cps_proxy_type != 'document'"
+    url_expr="string:${object_url}/folder_factories" visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="action_folder_contents" action_id="contents" category="object"
+    condition_expr="python:object.getTypeInfo().cps_proxy_type != 'document'"
+    url_expr="string:${object_url}/folder_contents" visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="action_edit" action_id="edit" category="object"
+    condition_expr="" url_expr="string:${object_url}/cpsdocument_edit_form"
+    visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="action_metadata" action_id="metadata" category="object"
+    condition_expr="not:portal/portal_membership/isAnonymousUser"
+    url_expr="string:${object_url}/cpsdocument_metadata" visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="action_local_roles" action_id="localroles" category="object"
+    condition_expr="python:object.getTypeInfo().cps_proxy_type != 'document'"
+    url_expr="string:${object_url}/folder_localrole_form" visible="True">
+  <permission value="Change permissions"/>
+ </action>
+ <action title="action_edit_online" action_id="edit_online" category="object"
+    condition_expr="python:object is not None and object.getContent().file is not None and modules[&quot;Products.CPSUtil.integration&quot;].isProductPresent(&quot;Products.ExternalEditor&quot;)"
+    url_expr="python:portal.getExternalEditorPath(object, &quot;file&quot;, &quot;file&quot;)"
+    visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="action_xml_docbook_export" action_id="xml_docbook_export"
+    category="object" condition_expr="python:object.getContent().file"
+    url_expr="string:${object_url}/exportXmlDocbook" visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="action_status_history" action_id="status_history"
+    category="workflow"
+    condition_expr="not:portal/portal_membership/isAnonymousUser"
+    url_expr="string:${object_url}/content_status_history" visible="True">
+  <permission value="View"/>
+ </action>
+</object>
