@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="Workspace">
+ <property name="allowed_content_types">
+  <element value="OOoDocbookDocument"/>
+ </property>
+</object>
