@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_layouts" meta_type="CPS Layouts Tool">
+ <object name="ooo_docbook_document" meta_type="CPS Layout"/>
+</object>
