@@ -1,0 +1,21 @@
+<?xml version="1.0"?>
+<object name="ooo_docbook_document" meta_type="CPS Schema">
+ <field name="file" meta_type="CPS OpenOffice.org Docbook Field">
+  <property name="suffix_text">_text</property>
+  <property name="suffix_xml">_xml</property>
+  <property name="suffix_xml_subfiles">_xml_subfiles</property>
+  <property name="suffix_html">_html</property>
+  <property name="suffix_html_subfiles">_html_subfiles</property>
+ </field>
+ <field name="file_html" meta_type="CPS File Field"/>
+ <field name="file_html_subfiles" meta_type="CPS SubObjects Field">
+  <property name="default_expr">nothing</property>
+ </field>
+ <field name="file_text" meta_type="CPS String Field">
+  <property name="is_searchabletext">True</property>
+ </field>
+ <field name="file_xml" meta_type="CPS File Field"/>
+ <field name="file_xml_subfiles" meta_type="CPS SubObjects Field">
+  <property name="default_expr">nothing</property>
+ </field>
+</object>
