@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+ <object name="cpsooo" meta_type="Filesystem Directory View"
+    directory="CPSOOo/skins/cpsooo"/>
+ <skin-path name="CPSSkins">
+  <layer name="cpsooo" insert-after="custom"/>
+ </skin-path>
+ <skin-path name="CPSSkins-macroless">
+  <layer name="cpsooo" insert-after="custom"/>
+ </skin-path>
+</object>
